kubernetes/fs_ser.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service2
spec:
  selector:
    app: local-dev # Default to proper-solution
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
