kubernetes/ps_ser.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-service1
spec:
  selector:
    app: local-devex # Default to proper-solution
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
