kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - path: /main
        pathType: Prefix
        backend:
          service:
            name: web-service1
            port:
              number: 3000
      - path: /bad
        pathType: Prefix
        backend:
          service:
            name: web-service2
            port:
              number: 8080
